--- a/.github/workflows/sandpaper-main.yaml
+++ b/.github/workflows/sandpaper-main.yaml
@@ -57,6 +57,7 @@ jobs:
         run: |
           reset <- "${{ github.event.inputs.reset }}" == "true"
           sandpaper::package_cache_trigger(TRUE)
+          print("DEBUG")
           print(getwd())
           sandpaper:::ci_deploy(reset = reset)
         shell: Rscript {0}
